# Govt-of-Goa

goa-interpreter/: .env.example  .gitignore  docker-compose.yml  pyproject.toml
goa-interpreter/app/: config.py  livekit_tokens.py  omnivoice.py  orchestrator.py  pipeline.py  processors.py  runner.py  server.py  sessions.py  translator.py  voice_clone.py
goa-interpreter/clients/: index.html  listener.html  master.html
goa-interpreter/docs/: architecture.excalidraw  build_diagram.py
goa-interpreter/tests/: test_omnivoice.py  test_orchestrator.py
