[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "goa-interpreter"
version = "0.1.0"
description = "Real-time multilingual voice interpreter: one master, N voice-cloned audiences."
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[silero,deepgram,elevenlabs,livekit,openai]>=0.0.100",
    "fastapi>=0.115.6,<1",
    "uvicorn[standard]>=0.32.0,<1",
    "python-dotenv>=1.0.0,<2",
    "pydantic>=2.10.6,<3",
    "pydantic-settings>=2.6.1,<3",
    "httpx>=0.27.0,<1",
    "loguru>=0.7.3,<1",
    "python-multipart>=0.0.20,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4,<10",
    "pytest-asyncio>=0.24.0,<2",
    "ruff>=0.8.0,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
